--- a/examples/elevenlabs-dubbing/promptfooconfig.yaml
+++ b/examples/elevenlabs-dubbing/promptfooconfig.yaml
@@ -1,5 +1,9 @@
 description: ElevenLabs Dubbing - Multi-language audio dubbing
 
+# NOTE: Dubbing is a slow async operation that can take 10-15+ minutes
+# The provider polls every 5s for up to 5 minutes by default
+# You may need to increase the timeout for production use
+
 # Dubbing uses audio/video files - pass via vars
 prompts:
   - '{{sourceFile}}'
