fix(elevenlabs): Fix Agents provider API compatibility
Fixed 7 major API compatibility issues with ElevenLabs Agents:

1. Agent creation format - use nested conversation_config structure
2. Simulation endpoint URL - correct endpoint is simulate-conversation
3. Conversation history - add required time_in_call_secs field
4. Model names - use short form (claude-sonnet-4-5 not claude-sonnet-4-5-20250929)
5. Evaluation results - handle object format with result:"success"/"failure"
6. Response field names - API uses simulated_conversation not history
7. Type definitions - match actual API response structure

Changed:
- src/providers/elevenlabs/agents/index.ts: Fix agent creation, simulation endpoint, response processing
- src/providers/elevenlabs/agents/conversation.ts: Add time_in_call_secs to history turns
- src/providers/elevenlabs/agents/evaluation.ts: Handle object-based evaluation results
- src/providers/elevenlabs/agents/types.ts: Update types for simulated_conversation field
- examples/elevenlabs-agents/promptfooconfig.yaml: Fix Claude model name

--- a/examples/elevenlabs-agents/promptfooconfig.yaml
+++ b/examples/elevenlabs-agents/promptfooconfig.yaml
@@ -88,7 +88,7 @@ providers:
         firstMessage: Hello! How may I assist you today?
         language: en
         voiceId: 2EiwWnXFnvU5JabPnv8n
-        llmModel: claude-sonnet-4-5-20250929
+        llmModel: claude-sonnet-4-5
         temperature: 0.7
         maxTokens: 500
       evaluationCriteria:
