fix: ElevenLabs Forced Alignment API compatibility
Fixed 3 major API compatibility issues in the Alignment provider:

1. Endpoint URL: Changed from /audio-alignment to /forced-alignment
2. Parameter names: Changed from 'transcript' to 'text'
3. Response field names: Changed from word_alignments/character_alignments to words/characters
   - Also changed CharacterAlignment.character to .text to match API

Also updated test assertions to check for 'words' instead of 'word_alignments'.

All tests now passing (100% pass rate).

--- a/examples/elevenlabs-alignment/promptfooconfig.yaml
+++ b/examples/elevenlabs-alignment/promptfooconfig.yaml
@@ -21,7 +21,7 @@ tests:
       format: json
     assert:
       - type: javascript
-        value: output.includes('word_alignments')
+        value: output.includes('words')
       - type: not-contains
         value: error
 
@@ -41,7 +41,7 @@ tests:
       format: json
     assert:
       - type: javascript
-        value: output.includes('word_alignments')
+        value: output.includes('words')
       - type: not-contains
         value: error
 
