fix(elevenlabs): address all code review feedback
Code Quality Fixes:
- Fix WebVTT subtitle format generation (use dots not commas in timestamps)
- Fix WebSocket client memory leak (prevent multiple message handler accumulation)
- Add explicit return type to getRecommendedSettings function
- Fix path parsing to use path.basename() for cross-platform compatibility
- Remove @ts-nocheck directives from all test files
- Fix alignment VTT test mock data (add missing words field)

Example Configuration Improvements:
- Add YAML schema headers to all 4 example configs
- Enforce proper field order (description → prompts → providers → defaultTest → tests)
- Create comprehensive READMEs for elevenlabs-alignment and elevenlabs-isolation
- Update headings and add init instructions for elevenlabs-stt and elevenlabs-tts-advanced

Site Documentation Fixes:
- Add required 'title' field to front matter in both guide and provider docs
- Fix admonition formatting (add blank lines for Prettier compliance)
- Fix markdown table (add closing backtick for enableLogging parameter)
- Fix provider entry structure (proper id/label ordering)
- Add language specifier to code block (text for CLI output)

All fixes maintain backward compatibility and follow project standards.

--- a/examples/elevenlabs-alignment/promptfooconfig.yaml
+++ b/examples/elevenlabs-alignment/promptfooconfig.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://promptfoo.dev/config-schema.json
 description: ElevenLabs Forced Alignment - Subtitle generation
 
 # Alignment uses audio files + transcripts - pass via vars
@@ -12,6 +13,13 @@ providers:
   # SRT subtitle format
   - id: elevenlabs:alignment:srt
     label: Alignment (SRT Subtitles)
+
+# Default test configuration
+defaultTest:
+  # All tests will require alignment to complete
+  assert:
+    - type: not-contains
+      value: error
 
 tests:
   - description: Align Armstrong moon landing speech
@@ -44,10 +52,3 @@ tests:
         value: output.includes('words')
       - type: not-contains
         value: error
-
-# Default test configuration
-defaultTest:
-  # All tests will require alignment to complete
-  assert:
-    - type: not-contains
-      value: error
