--- a/package.json
+++ b/package.json
@@ -219,6 +219,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.67.0",
     "@apidevtools/json-schema-ref-parser": "^12.0.2",
+    "@azure/msal-node": "^3.8.0",
     "@googleapis/sheets": "^9.8.0",
     "@inquirer/checkbox": "^4.3.0",
     "@inquirer/confirm": "^5.1.19",
