fix(integrations): address CodeRabbit feedback and CI issues for SharePoint integration
- Update provider versions to latest models (GPT-5, Claude 4.5 Sonnet)
- Fix README heading and add init command instructions
- Add title front-matter to SharePoint docs
- Fix SharePoint path encoding bug using encodeURI instead of encodeURIComponent
- Update CHANGELOG.md with SharePoint integration entry
- Fix biome.json glob patterns for compatibility with v2.2.6
- Regenerate JSON schema

--- a/examples/sharepoint-integration/promptfooconfig.yaml
+++ b/examples/sharepoint-integration/promptfooconfig.yaml
@@ -6,7 +6,9 @@ prompts:
   - 'Please translate the following text to {{language}}: {{input}}'
 
 providers:
-  - openai:gpt-4.1-mini
+  - openai:gpt-5
+  - openai:gpt-5-mini
+  - anthropic:claude-sonnet-4-5-20250929
 
 # Replace with your SharePoint URL to the CSV file
 tests: https://yourcompany.sharepoint.com/sites/yoursite/Shared%20Documents/test-cases.csv
@@ -15,5 +17,5 @@ tests: https://yourcompany.sharepoint.com/sites/yoursite/Shared%20Documents/test
 #   options:
 #     provider:
 #       text:
-#         id: openai:gpt-4.1-mini
+#         id: openai:gpt-5-mini
 
