--- a/package.json
+++ b/package.json
@@ -228,6 +228,7 @@
     "@inquirer/select": "^4.4.0",
     "@modelcontextprotocol/sdk": "^1.20.0",
     "@openai/agents": "^0.1.11",
+    "@types/mime-types": "^3.0.1",
     "@types/ws": "^8.18.1",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
@@ -248,6 +249,7 @@
     "dedent": "^1.7.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
+    "execa": "^9.6.0",
     "express": "^5.1.0",
     "fast-deep-equal": "^3.1.3",
     "fast-safe-stringify": "^2.1.1",
@@ -255,16 +257,20 @@
     "fastest-levenshtein": "^1.0.16",
     "glob": "^11.0.3",
     "http-z": "^7.1.3",
+    "istextorbinary": "^9.5.0",
     "jks-js": "^1.1.4",
     "js-rouge": "^3.0.0",
     "js-yaml": "^4.1.0",
     "jsdom": "^26.1.0",
     "lru-cache": "^11.2.2",
     "mathjs": "^14.9.1",
+    "mime-types": "^3.0.1",
+    "minimatch": "^10.1.1",
     "node-cache": "^5.1.2",
     "nunjucks": "^3.2.4",
     "openai": "^6.3.0",
     "opener": "^1.5.2",
+    "p-limit": "^7.2.0",
     "pem": "^1.15.1",
     "posthog-node": "^5.9.5",
     "proxy-agent": "^6.5.0",
@@ -273,7 +279,9 @@
     "rfdc": "^1.4.1",
     "rxjs": "^7.8.2",
     "semver": "^7.7.3",
+    "simple-git": "^3.30.0",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tsx": "^4.20.6",
     "undici": "^7.16.0",
     "uuid": "^11.1.0",
