--- a/package.json
+++ b/package.json
@@ -270,6 +270,7 @@
     "nunjucks": "^3.2.4",
     "openai": "^6.3.0",
     "opener": "^1.5.2",
+    "ora": "^5.4.1",
     "p-limit": "^7.2.0",
     "pem": "^1.15.1",
     "posthog-node": "^5.9.5",
