--- a/examples/openai-agents-basic/package.json
+++ b/examples/openai-agents-basic/package.json
@@ -2,7 +2,7 @@
   "name": "@promptfoo/openai-agents-basic-example",
   "version": "1.0.0",
   "private": true,
-  "description": "Basic example of using OpenAI Agents SDK with promptfoo",
+  "description": "D&D adventure game with OpenAI Agents SDK - dungeon master with dice rolling and character management",
   "type": "module",
   "scripts": {
     "eval": "promptfoo eval",
