refactor(code-scan): restructure to src/codeScan and centralize error classes
- Move src/commands/codeScans → src/codeScan (singular, flatter structure)
- Move tests from src/commands/codeScans → test/codeScans
- Centralize 6 error classes in src/types/codeScan.ts
- Remove re-exports, use direct imports throughout
- Update all import paths in affected files

Addresses PR review feedback for cleaner architecture.

--- a/package.json
+++ b/package.json
@@ -235,6 +235,7 @@
     "ajv-formats": "^3.0.1",
     "async": "^3.2.6",
     "better-sqlite3": "12.4.1",
+    "binary-extensions": "^3.1.0",
     "cache-manager": "^4.1.0",
     "cache-manager-fs-hash": "^3.0.0",
     "chalk": "^4.1.2",
@@ -284,6 +285,7 @@
     "simple-git": "^3.30.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "text-extensions": "^3.1.0",
     "tsx": "^4.20.6",
     "undici": "^7.16.0",
     "uuid": "^11.1.0",
