--- a/site/package.json
+++ b/site/package.json
@@ -62,6 +62,7 @@
   "dependencies": {
     "@mui/material": "^7.3.4",
     "@mui/system": "^7.3.3",
+    "react-countup": "^6.5.3",
     "swiper": "^11.2.10"
   }
 }
