--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -382,6 +382,7 @@ jobs:
           npm run bin auth login -- -k ${{ secrets.PROMPTFOO_INTEGRATION_TEST_API_KEY }} -h ${{ secrets.PROMPTFOO_INTEGRATION_TEST_API_HOST }}
 
       - name: Run Redteam with Staging API
+        continue-on-error: true
         run: |
           npm run test:redteam:integration
 
