feat(test-cases): add xlsx/xls support as optional peer dependency (#4841)

--- a/examples/simple-csv/promptfooconfig.yaml
+++ b/examples/simple-csv/promptfooconfig.yaml
@@ -5,3 +5,5 @@ prompts:
 providers:
   - openai:gpt-4.1-mini
 tests: file://tests.csv
+# Alternative: Use Excel file instead (requires `npm install xlsx`)
+# tests: file://tests.xlsx
