--- a/package.json
+++ b/package.json
@@ -84,11 +84,11 @@
       "chokidar": "4.0.3",
       "esbuild": "0.25.9"
     },
-    "gcp-metadata": "5.3.0",
-    "gaxios": "5.1.3",
-    "https-proxy-agent": "5.0.1",
-    "node-fetch": "2.7.0",
-    "agent-base": "6.0.2"
+    "gaxios": "^6.0.0",
+    "https-proxy-agent": "^7.0.0",
+    "mongoose": {
+      "gcp-metadata": "^6.0.0"
+    }
   },
   "devDependencies": {
     "@adaline/anthropic": "1.8.0",
