--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "promptfoo",
   "description": "LLM eval & testing toolkit",
   "author": "Ian Webster",
-  "version": "0.119.4",
+  "version": "0.119.4_beta",
   "license": "MIT",
   "type": "commonjs",
   "repository": {
@@ -40,11 +40,15 @@
     "build:app": "npm run build --prefix src/app",
     "build:clean": "shx rm -rf dist",
     "build:watch": "tsc --watch",
-    "build": "npm run generate-constants && tsc && shx cp src/*.html dist/src && shx cp src/python/wrapper.py dist/src/python && shx cp src/python/persistent_wrapper.py dist/src/python && shx mkdir -p dist/src/golang && shx cp src/golang/wrapper.go dist/src/golang && shx mkdir -p dist/src/ruby && shx cp src/ruby/wrapper.rb dist/src/ruby && shx cp src/dynamic-import.cjs dist/src && shx rm -rf dist/drizzle && shx cp -r drizzle dist/drizzle && npm run build:app && shx chmod +x dist/src/main.js",
+    "build": "npm run generate-constants && tsc && shx cp src/*.html dist/src && shx cp src/python/wrapper.py dist/src/python && shx cp src/python/persistent_wrapper.py dist/src/python && shx mkdir -p dist/src/golang && shx cp src/golang/wrapper.go dist/src/golang && shx mkdir -p dist/src/ruby && shx cp src/ruby/wrapper.rb dist/src/ruby && shx cp src/dynamic-import.cjs dist/src && shx rm -rf dist/drizzle && shx cp -r drizzle dist/drizzle && shx rm -rf dist/drizzle-mysql && shx cp -r drizzle-mysql dist/drizzle-mysql && npm run build:app && shx chmod +x dist/src/main.js",
     "citation:generate": "ts-node scripts/generateCitation.ts",
     "db:generate": "npx drizzle-kit generate",
     "db:migrate": "node --require tsx/cjs src/migrate.ts",
     "db:studio": "npx drizzle-kit studio",
+    "db:mysql:generate": "npx drizzle-kit generate --config=drizzle-mysql.config.ts",
+    "db:mysql:migrate": "node --require tsx/cjs src/database/mysql-migrate.ts",
+    "db:mysql:studio": "npx drizzle-kit studio --config=drizzle-mysql.config.ts",
+    "migrate:to-mysql": "npx tsx migrate-to-mysql.ts",
     "dev:app": "npm run dev --prefix src/app",
     "dev:server": "nodemon -P 1000 src/server/index.ts",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:app\"",
@@ -261,6 +265,7 @@
     "jsdom": "^26.1.0",
     "lru-cache": "^11.2.2",
     "mathjs": "^14.9.1",
+    "mysql2": "^3.11.4",
     "node-cache": "^5.1.2",
     "nunjucks": "^3.2.4",
     "openai": "^6.3.0",
