--- a/code-scan-action/package.json
+++ b/code-scan-action/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@promptfoo/code-scan-action",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "GitHub Action for scanning PRs with promptfoo code-scan",
   "private": true,
   "main": "dist/index.js",
   "scripts": {
-    "build": "ncc build src/main.ts -o dist --source-map --license licenses.txt && ./scripts/deploy-test.sh",
+    "build": "ncc build src/main.ts -o dist --source-map --license licenses.txt",
     "package": "npm run build && git add dist/",
     "test": "echo \"Action tests run via parent jest config\" && exit 0",
     "dev": "npm run build && cd ../cli && npm run build && cd .. && act pull_request -W action/.github/workflows/test-scan.yml -e action/.github/workflows/test-event.json --container-architecture linux/amd64"
