--- a/code-scan-action/package.json
+++ b/code-scan-action/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@promptfoo/code-scan-action",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "GitHub Action for scanning PRs with promptfoo code-scan",
   "private": true,
   "main": "dist/index.js",
@@ -8,7 +8,7 @@
     "build": "ncc build src/main.ts -o dist --source-map --license licenses.txt",
     "package": "npm run build && git add dist/",
     "test": "echo \"Action tests run via parent jest config\" && exit 0",
-    "dev": "npm run build && cd ../cli && npm run build && cd .. && act pull_request -W action/.github/workflows/test-scan.yml -e action/.github/workflows/test-event.json --container-architecture linux/amd64"
+    "dev": "npm run build && act pull_request -W .github/workflows/test-scan.yml -e .github/workflows/test-event.json --container-architecture linux/amd64"
   },
   "engines": {
     "node": ">=20.0.0"
