--- a/site/blog/authors.yml
+++ b/site/blog/authors.yml
@@ -22,6 +22,12 @@ ben:
   url: https://github.com/benshipley
   image_url: /img/team/ben.jpeg
 
+dane:
+  name: Dane Schneider
+  title: Staff Engineer
+  url: https://github.com/danenania
+  image_url: /img/team/dane.jpeg
+
 faizan:
   name: Faizan Minhas
   title: Senior Engineer
