chore: add gcp-metadata to depcheck ignore list
gcp-metadata is a dependency required for npm resolution consistency across
npm 10.x and 11.x but is never directly imported in code. Without it as a
direct dependency, npm ci fails on Node 20/22 (npm 10.x) with lock file
sync errors, even though it works on Node 24 (npm 11.x).

This is a resolution dependency, not a code dependency, so it's appropriate
to exclude from depcheck.

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "test": "jest",
     "tsc": "tsc",
     "mcp": "node dist/src/main.js mcp",
-    "depcheck": "depcheck --ignores=\"@types/*,@biomejs/biome,prettier,shx,concurrently,madge,knip,vite,typescript,tshy\" --ignore-dirs=\"dist,site,examples,node_modules\""
+    "depcheck": "depcheck --ignores=\"@types/*,@biomejs/biome,prettier,shx,concurrently,madge,knip,vite,typescript,tshy,gcp-metadata\" --ignore-dirs=\"dist,site,examples,node_modules\""
   },
   "overrides": {
     "uri-js": "npm:uri-js-replace",
